refocus_cmake/include/GPC3100/Gpcad.h

//-----------------------------------------------------------------------------------------------
//
//     GPC/GPF-3100 Measure Temperature
//
//-----------------------------------------------------------------------------------------------
#define AD_GET_CURRENT_TEMPERATURE			1	// Current Temperature
#define AD_LOAD_TEMPERATURE					2	// User area Temperature
#define AD_LOAD_FACTORY_SETTING_TEMPERATURE	3	// Factory setting Temperature
#define AD_SAVE_TEMPERATURE_USER			4	// User area of Eeprom 
//-----------------------------------------------------------------------------------------------
//
//     GPC/GPF-3100 Error Identifier
//
//-----------------------------------------------------------------------------------------------
#define AD_ERROR_SUCCESS						0x00000000
#define AD_ERROR_NOT_DEVICE						0xC0000001
#define AD_ERROR_NOT_OPEN						0xC0000002
#define AD_ERROR_INVALID_HANDLE					0xC0000003
#define AD_ERROR_ALREADY_OPEN					0xC0000004
#define AD_ERROR_NOT_SUPPORTED					0xC0000009
#define AD_ERROR_NOW_SAMPLING					0xC0001001
#define AD_ERROR_STOP_SAMPLING					0xC0001002
#define AD_ERROR_START_SAMPLING					0xC0001003
#define AD_ERROR_SAMPLING_TIMEOUT				0xC0001004
#define AD_ERROR_INVALID_PARAMETER				0xC0001021
#define AD_ERROR_ILLEGAL_PARAMETER				0xC0001022
#define AD_ERROR_NULL_POINTER					0xC0001023
#define AD_ERROR_GET_DATA						0xC0001024
#define AD_ERROR_USED_DA						0xC0001025
#define AD_ERROR_FILE_OPEN						0xC0001041
#define AD_ERROR_FILE_CLOSE						0xC0001042
#define AD_ERROR_FILE_READ						0xC0001043
#define AD_ERROR_FILE_WRITE						0xC0001044
#define AD_ERROR_INVALID_DATA_FORMAT			0xC0001061
#define AD_ERROR_INVALID_AVERAGE_OR_SMOOTHING	0xC0001062
#define AD_ERROR_INVALID_SOURCE_DATA			0xC0001063
#define AD_ERROR_NOT_ALLOCATE_MEMORY			0xC0001081
#define AD_ERROR_NOT_LOAD_DLL					0xC0001082
#define AD_ERROR_CALL_DLL						0xC0001083
// -----------------------------------------------------------------------
//     Sampling Condition Structure for Each Channel
// -----------------------------------------------------------------------
typedef struct {
	ULONG			ulChNo;
	ULONG			ulRange;
} ADSMPLCHREQ, *PADSMPLCHREQ;
// -----------------------------------------------------------------------
//     Analog Trigger Condition Structure for Each Channel
// -----------------------------------------------------------------------
typedef struct {
	ULONG			ulChNo;
	float			fTrigLevel;
	float			fHysteresis;
} ADTRIGCHREQ, *PADTRIGCHREQ;
// -----------------------------------------------------------------------
//     Sampling Condition Structure
// -----------------------------------------------------------------------
typedef struct {
	ULONG			ulChCount;
	ADSMPLCHREQ		SmplChReq[256];
	ULONG			ulSamplingMode;
	ULONG			ulSingleDiff;
	ULONG			ulSmplNum;
	ULONG			ulSmplEventNum;
	float			fSmplFreq;
	ULONG			ulTrigPoint;
	ULONG			ulTrigMode;
	LONG			lTrigDelay;
	ULONG			ulTrigCh;
	float			fTrigLevel1;
	float			fTrigLevel2;
	ULONG			ulEClkEdge;
	ULONG			ulATrgPulse;
	ULONG			ulTrigEdge;
	ULONG			ulTrigDI;
	ULONG			ulFastMode;
} ADSMPLREQ, *PADSMPLREQ;
// -----------------------------------------------------------------------
//     Sampling Condition Structure for Bus Master
// -----------------------------------------------------------------------
typedef struct {
	ULONG			ulChCount;
	ADSMPLCHREQ		SmplChReq[256];
	ULONG			ulSingleDiff;
	ULONG			ulSmplNum;
	ULONG			ulSmplEventNum;
	ULONG			ulSmplRepeat;
	ULONG			ulBufferMode;
	float			fSmplFreq;
	float			fScanFreq;
	ULONG			ulStartMode;
	ULONG			ulStopMode;
	ULONG			ulPreTrigDelay;
	ULONG			ulPostTrigDelay;
	ADTRIGCHREQ		TrigChReq[2];
	ULONG			ulATrgMode;
	ULONG			ulATrgPulse;
	ULONG			ulStartTrigEdge;
	ULONG			ulStopTrigEdge;
	ULONG			ulTrigDI;
	ULONG			ulEClkEdge;
	ULONG			ulFastMode;
	ULONG			ulStatusMode;
	ULONG			ulErrCtrl;
} ADBMSMPLREQ, *PADBMSMPLREQ;
// -----------------------------------------------------------------------
//     Sampling Condition Structure for Memory
// -----------------------------------------------------------------------
typedef struct {
	ULONG			ulChCount;
	ADSMPLCHREQ		SmplChReq[256];
	ULONG			ulSingleDiff;
	float			fSmplFreq;
	ULONG			ulStopMode;
	ULONG			ulPreTrigDelay;
	ULONG			ulPostTrigDelay;
	ADTRIGCHREQ		TrigChReq[2];
	ULONG			ulATrgMode;
	ULONG			ulATrgPulse;
	ULONG			ulStopTrigEdge;
	ULONG			ulEClkEdge;
	ULONG			ulFastMode;
	ULONG			ulStatusMode;
	ULONG			ulErrCtrl;
} ADMEMSMPLREQ, *PADMEMSMPLREQ;
// -----------------------------------------------------------------------
//     Board Specification Structure
// -----------------------------------------------------------------------
typedef struct {
	ULONG			ulBoardType;
	ULONG			ulBoardID;
	DWORD			dwSamplingMode;
	ULONG			ulChCountS;
	ULONG			ulChCountD;
	ULONG			ulResolution;
	DWORD			dwRange;
	ULONG			ulIsolation;
	ULONG			ulDi;
	ULONG			ulDo;
} ADBOARDSPEC, *PADBOARDSPEC;