refocus_cmake/include/GPC3100/FbiAd.bas


'-----------------------------------------------------------------------------------------------
'
'     GPC/GPF-3100 Measure Temperature
'
'-----------------------------------------------------------------------------------------------
Public Const AD_GET_CURRENT_TEMPERATURE = 1            ' Current Temperature
Public Const AD_LOAD_TEMPERATURE = 2                   ' User area Temperature
Public Const AD_LOAD_FACTORY_SETTING_TEMPERATURE = 3   ' Factory setting Temperature
Public Const AD_SAVE_TEMPERATURE_USER = 4              ' User area of Eeprom 

'-------------------------------------------------
'
'   GPC/GPF-3100 Visual Basic  Structure Declaration
'
'-------------------------------------------------

' -----------------------------------------------------------------------
'  Sampling Condition Structure for Each Channel
' -----------------------------------------------------------------------
Type ADSMPLCHREQ
    ulChNo As Long
    ulRange As Long
End Type


' -----------------------------------------------------------------------
'  Analog Trigger Condition Structure for Each Channel
' -----------------------------------------------------------------------
Type ADTRIGCHREQ
    ulChNo As Long
    fTrigLevel As Single
    fHysteresis As Single
End Type


' -----------------------------------------------------------------------
'  Sampling Condition Structure
' -----------------------------------------------------------------------
Type ADSMPLREQ
    ulChCount As Long
    SmplChReq(0 To 255) As ADSMPLCHREQ
    ulSamplingMode As Long
    ulSingleDiff As Long
    ulSmplNum As Long
    ulSmplEventNum As Long
    fSmplFreq As Single
    ulTrigPoint As Long
    ulTrigMode As Long
    lTrigDelay As Long
    ulTrigCh As Long
    fTrigLevel1 As Single
    fTrigLevel2 As Single
    ulEClkEdge As Long
    ulATrgPulse As Long
    ulTrigEdge As Long
    ulTrigDI As Long
    ulFastMode As Long
End Type


' -----------------------------------------------------------------------
'  Sampling Condition Structure for Bus Master
' -----------------------------------------------------------------------
Type ADBMSMPLREQ
    ulChCount As Long
    SmplChReq(0 To 255) As ADSMPLCHREQ
    ulSingleDiff As Long
    ulSmplNum As Long
    ulSmplEventNum As Long
    ulSmplRepeat As Long
    ulBufferMode As Long
    fSmplFreq As Single
    fScanFreq As Single
    ulStartMode As Long
    ulStopMode As Long
    ulPreTrigDelay As Long
    ulPostTrigDelay As Long
        TrigChReq(0 To 1) As ADTRIGCHREQ
    ulATrgMode As Long
    ulATrgPulse As Long
    ulStartTrigEdge As Long
    ulStopTrigEdge As Long
    ulTrigDI As Long
    ulEClkEdge As Long
    ulFastMode As Long
    ulStatusMode As Long
    ulErrCtrl As Long
End Type

' -----------------------------------------------------------------------
'     Sampling Condition Structure for Memory
' -----------------------------------------------------------------------
Type ADMEMSMPLREQ
    ulChCount As Long
    SmplChReq(0 To 255) As ADSMPLCHREQ
    ulSingleDiff As Long
    fSmplFreq As Single
    ulStopMode As Long
    ulPreTrigDelay As Long
    ulPostTrigDelay As Long
        TrigChReq(0 To 1) As ADTRIGCHREQ
    ulATrgMode As Long
    ulATrgPulse As Long
    ulStopTrigEdge As Long
    ulEClkEdge As Long
    ulFastMode As Long
    ulStatusMode As Long
    ulErrCtrl As Long
End Type

' -----------------------------------------------------------------------
'  Board Specification Structure
' -----------------------------------------------------------------------
Type ADBOARDSPEC
    ulBoardType As Long
    ulBoardID As Long
    dwSamplingMode As Long
    ulChCountS As Long
    ulChCountD As Long
    ulResolution As Long
    dwRange As Long
    ulIsolation As Long
    ulDi As Long
    ulDo As Long
End Type


'-----------------------------------------------------------------------------------------------
'
'   GPC/GPF-3100 Visual Basic  Error Identifier
'
'-----------------------------------------------------------------------------------------------
Public Const AD_ERROR_SUCCESS = 0
Public Const AD_ERROR_NOT_DEVICE = &HC0000001
Public Const AD_ERROR_NOT_OPEN = &HC0000002
Public Const AD_ERROR_INVALID_HANDLE = &HC0000003
Public Const AD_ERROR_ALREADY_OPEN = &HC0000004
Public Const AD_ERROR_NOT_SUPPORTED = &HC0000009
Public Const AD_ERROR_NOW_SAMPLING = &HC0001001
Public Const AD_ERROR_STOP_SAMPLING = &HC0001002
Public Const AD_ERROR_START_SAMPLING = &HC0001003
Public Const AD_ERROR_SAMPLING_TIMEOUT = &HC0001004
Public Const AD_ERROR_INVALID_PARAMETER = &HC0001021
Public Const AD_ERROR_ILLEGAL_PARAMETER = &HC0001022
Public Const AD_ERROR_NULL_POINTER = &HC0001023
Public Const AD_ERROR_GET_DATA = &HC0001024
Public Const AD_ERROR_USED_DA = &HC0001025
Public Const AD_ERROR_FILE_OPEN = &HC0001041
Public Const AD_ERROR_FILE_CLOSE = &HC0001042
Public Const AD_ERROR_FILE_READ = &HC0001043
Public Const AD_ERROR_FILE_WRITE = &HC0001044
Public Const AD_ERROR_INVALID_DATA_FORMAT = &HC0001061
Public Const AD_ERROR_INVALID_AVERAGE_OR_SMOOTHING = &HC0001062
Public Const AD_ERROR_INVALID_SOURCE_DATA = &HC0001063
Public Const AD_ERROR_NOT_ALLOCATE_MEMORY = &HC0001081
Public Const AD_ERROR_NOT_LOAD_DLL = &HC0001082
Public Const AD_ERROR_CALL_DLL = &HC0001083

'-----------------------------------------------------------------------------------------------
'
'   GPC/GPF-3100 Visual Basic  Function Declaration
'
'-----------------------------------------------------------------------------------------------

Declare Function AdOpen Lib "fbiad.dll" (ByVal lpszName As String) As Long
Declare Function AdClose Lib "fbiad.dll" (ByVal hdevicehandle As Long) As Long
Declare Function AdGetDeviceInfo Lib "fbiad.dll" (ByVal hdevicehandle As Long, ByRef pBoardSpec As ADBOARDSPEC) As Long
Declare Function AdSetBoardConfig Lib "fbiad.dll" (ByVal hdevicehandle As Long, ByVal hEvent As Long, ByVal lpCallBackProc As Long, ByVal dwUser As Long) As Long
Declare Function AdGetBoardConfig Lib "fbiad.dll" (ByVal hdevicehandle As Long, ByRef ulAdSmplEventFactor As Long) As Long
Declare Function AdSetSamplingConfig Lib "fbiad.dll" (ByVal hdevicehandle As Long, ByRef pAdSmplConfig As ADSMPLREQ) As Long
Declare Function AdGetSamplingConfig Lib "fbiad.dll" (ByVal hdevicehandle As Long, ByRef pAdSmplConfig As ADSMPLREQ) As Long
Declare Function AdGetSamplingData Lib "fbiad.dll" (ByVal hdevicehandle As Long, ByRef pSmplData As Any, ByRef ulSmplNum As Long) As Long
Declare Function AdClearSamplingData Lib "fbiad.dll" (ByVal hdevicehandle As Long) As Long
Declare Function AdStartSampling Lib "fbiad.dll" (ByVal hdevicehandle As Long, ByVal ulSyncFlag As Long) As Long
Declare Function AdStartFileSampling Lib "fbiad.dll" (ByVal hdevicehandle As Long, ByVal pszPathName As String, ByVal ulFileFlag As Long) As Long
Declare Function AdTriggerSampling Lib "fbiad.dll" (ByVal hdevicehandle As Long, ByVal ulChNo As Long, ByVal ulRange As Long, ByVal ulSingleDiff As Long, ByVal ulTriggerMode As Long, ByVal ulTrigEdge As Long, ByVal ulSmplNum As Long) As Long
Declare Function AdMemTriggerSampling Lib "fbiad.dll" (ByVal hdevicehandle As Long, ByVal ulChCount As Long, ByRef lpSmplChReq As ADSMPLCHREQ, ByVal ulSmplNum As Long, ByVal ulRepeatCount As Long, ByVal ulTrigEdge As Long, ByVal fSmplFreq As Single, ByVal ulEClkEdge As Long, ByVal ulFastMode As Long) As Long
Declare Function AdSyncSampling Lib "fbiad.dll" (ByVal hdevicehandle As Long, ByVal ulMode As Long) As Long
Declare Function AdStopSampling Lib "fbiad.dll" (ByVal hdevicehandle As Long) As Long
Declare Function AdGetStatus Lib "fbiad.dll" (ByVal hdevicehandle As Long, ByRef ulAdSmplStatus As Long, ByRef ulAdSmplCount As Long, ByRef ulAdAvailCount As Long) As Long
Declare Function AdInputAD Lib "fbiad.dll" (ByVal hdevicehandle As Long, ByVal ulCh As Long, ByVal ulSingleDiff As Long, ByRef lpAdSmplChReq As ADSMPLCHREQ, ByRef lpData As Any) As Long
Declare Function AdInputDI Lib "fbiad.dll" (ByVal hdevicehandle As Long, ByRef dwData As Long) As Long
Declare Function AdOutputDO Lib "fbiad.dll" (ByVal hdevicehandle As Long, ByVal dwData As Long) As Long
Declare Function AdAdjustVR Lib "fbiad.dll" (ByVal hdevicehandle As Long, ByVal ulAdjustCh As Long, ByVal ulSingleDiff As Long, ByVal ulSelVolume As Long, ByVal ulControl As Long, ByVal ulTap As Long) As Long
Declare Function AdReadAdjustVR Lib "fbiad.dll" (ByVal hdevicehandle As Long, ByVal ulAdjustCh As Long) As Long
Declare Function AdReadAdjustVREx Lib "fbiad.dll" (ByVal hdevicehandle As Long, ByVal ulAdjustCh As Long, ByVal ulControl As Long) As Long
Declare Function AdDataConv Lib "FbiAdDC.DLL" (ByVal uSrcFormCode As Long, ByRef pSrcData As Any, ByVal uSrcSmplDataNum As Long, ByRef pSrcSmplReq As ADSMPLREQ, ByVal uDestFormCode As Long, ByRef pDestData As Any, ByRef puDestSmplDataNum As Long, ByRef pDestSmplReq As ADSMPLREQ, ByVal uEffect As Long, ByVal uCount As Long, ByVal lpfnConv As Long) As Long
Declare Function AdReadFile Lib "FbiAdDC.DLL" (ByVal pszPathName As String, ByRef pSmplData As Any, ByVal uFormCode As Long) As Long

Declare Function AdBmSetSamplingConfig Lib "fbiad.dll" (ByVal hdevicehandle As Long, ByRef pAdBmSmplConfig As ADBMSMPLREQ) As Long
Declare Function AdBmGetSamplingConfig Lib "fbiad.dll" (ByVal hdevicehandle As Long, ByRef pAdBmSmplConfig As ADBMSMPLREQ) As Long
Declare Function AdBmGetSamplingData Lib "fbiad.dll" (ByVal hdevicehandle As Long, ByRef pBmSmplData As Any, ByRef ulBmSmplNum As Long) As Long
Declare Function AdBmStartFileSampling Lib "fbiad.dll" (ByVal hdevicehandle As Long, ByVal pszPathName As String, ByVal ulFileFlag As Long) As Long

Declare Function AdLvSetSamplingConfig Lib "fbiad.dll" (ByVal hdevicehandle As Long, ByVal ulChNo As Long, ByVal ulSmplNum As Long, ByVal fSmplFreq As Single, ByVal ulRange As Long, ByVal hEvent As Long, ByVal lpCallBackProc As Long, ByVal dwUser As Long) As Long
Declare Function AdLvGetSamplingConfig Lib "fbiad.dll" (ByVal hdevicehandle As Long, ByVal ulChNo As Long, ByRef ulSmplNum As Long, ByRef fSmplFreq As Single, ByRef ulRange As Long) As Long
Declare Function AdLvCalibration Lib "fbiad.dll" (ByVal hdevicehandle As Long, ByVal ulChNo As Long, ByVal ulCalibration As Long) As Long
Declare Function AdLvGetSamplingData Lib "fbiad.dll" (ByVal hdevicehandle As Long, ByVal ulChNo As Long, ByRef pSmplData As Any, ByRef ulSmplNum As Long) As Long
Declare Function AdLvStartSampling Lib "fbiad.dll" (ByVal hdevicehandle As Long, ByVal ulChNo As Long) As Long
Declare Function AdLvStopSampling Lib "fbiad.dll" (ByVal hdevicehandle As Long, ByVal ulChNo As Long) As Long
Declare Function AdLvGetStatus Lib "fbiad.dll" (ByVal hdevicehandle As Long, ByVal ulChNo As Long, ByRef ulAdSmplStatus As Long, ByRef ulAdSmplCount As Long, ByRef ulAdAvailCount As Long) As Long
Declare Function AdMeasureTemperature Lib "fbiad.dll" (ByVal hdevicehandle As Long, ByRef fTemperature As Single) As Long
Declare Function AdMeasureTemperatureEx Lib "fbiad.dll" (ByVal hdevicehandle As Long, ByRef fTemperature As Single, ByVal ulControl As Long) As Long

Declare Function AdAllocateSamplingBuffer Lib "fbiad.dll" (ByVal hdevicehandle As Long) As Long
Declare Function AdReadSamplingBuffer Lib "fbiad.dll" (ByVal hdevicehandle As Long, ByVal lOffset As Long, ByRef ulSmplNum As Long, ByRef pSmplData As Any) As Long

Declare Function AdSetRangeEvent Lib "fbiad.dll" (ByVal hdevicehandle As Long, ByVal dwEventMask As Long, ByVal dwStopMode As Long) As Long
Declare Function AdGetRangeEventStatus Lib "fbiad.dll" (ByVal hdevicehandle As Long, ByRef ulEventChNo As Long, ByRef ulEventStatus As Long) As Long
Declare Function AdResetRangeEvent Lib "fbiad.dll" (ByVal hdevicehandle As Long) As Long
Declare Function AdGetOverRangeChStatus Lib "fbiad.dll" (ByVal hdevicehandle As Long, ByRef ulChStatusNo As Long) As Long
Declare Function AdResetOverRangeCh Lib "fbiad.dll" (ByVal hdevicehandle As Long) As Long
